--- a/template-web-project/styles/style.css
+++ b/template-web-project/styles/style.css
@@ -1,8 +1,12 @@
 body {
-  color: red;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h1 {
   color: red;
   font-family: monospace;
+}
+
+h2{
+  color: chartreuse;
 }
