--- a/html-css-workshop/ugly-site/style.css
+++ b/html-css-workshop/ugly-site/style.css
@@ -7,4 +7,17 @@ h1{
     color: rgb(255, 66, 255);
     text-align: center;
     transform: rotate(-137deg); /*this rotates the text*/
+    margin-bottom: 42px;
+}
+.tag-line{
+    text-align: right;
+    font-size: 50px;
+    color:rgb(43, 226, 67);
+    text-decoration: line-through;
+}
+
+.fashion{
+    font-size: 30px;
+    color: darkkhaki;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
