--- a/html-css-workshop/ugly-site/style.css
+++ b/html-css-workshop/ugly-site/style.css
@@ -14,6 +14,7 @@ h1{
     font-size: 50px;
     color:rgb(43, 226, 67);
     text-decoration: line-through;
+    line-height: 2em;
 }
 
 .fashion{
@@ -27,6 +28,7 @@ h1{
     color:rgb(236, 16, 20);
     text-decoration: underline;
     font-size: 20px;
+    letter-spacing: 2em;
 }
 
 .alter{
@@ -48,6 +50,7 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
     color: lightseagreen;
+    text-transform: uppercase;
 }
 
 .trends{
@@ -57,7 +60,7 @@ h1{
 
 .advance{
     text-shadow: forestgreen 3px 5px;
-    float: right;
+    float: right; /*allows text to wrap around element*/
     font-size: 24px;
 }
 
@@ -89,6 +92,7 @@ h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 35px;
     color: fuchsia;
+    letter-spacing: -0.2em; /*decreases space b/w letters*/
 }
 
 .moment{
@@ -113,13 +117,15 @@ h1{
     font-size: 80px;
     color: darkgoldenrod;
     margin: 12%;
+    font-style: oblique;
 }
 
 p.real{
     color: rgb(245, 201, 201);
-    font-size: 19px;
+    font-size: 26px;
     text-decoration: line-through;
     font-weight: bold;
+    font-variant: small-caps;
 }
 
 .pop-one{
@@ -141,6 +147,7 @@ p.real{
 
 .pop-three{
     width: 68%;
+    border: 16px dotted pink;
     border-radius: 20px;
     background: mediumslateblue;
     padding-left: 88px;
