--- a/html-css-workshop/ugly-site/style.css
+++ b/html-css-workshop/ugly-site/style.css
@@ -112,6 +112,22 @@ h1{
     margin-left: 170px;
 }
 
+.primary {
+    width: 21%;
+    border: 10px dashed cornflowerblue;
+}
+
+.secondary {
+    width: 62%;
+    margin-left: 32%;
+}
+
+.tertiary {
+    margin: 155px;
+    padding: 28%;
+    width: 80%;
+}
+
 .culture{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 80px;
