--- a/assignment-2-css/style.css
+++ b/assignment-2-css/style.css
@@ -1,3 +1,40 @@
 body{
     font-family: 'Inter', sans-serif;
+    width: 100%;
+    height: 100%;
+}
+
+html {
+    height: 100%;
+    width: 100%;
+}
+
+div nav{
+    text-decoration: underline;
+    text-decoration: overline;
+}
+
+span{
+    color: rgb(164, 107, 218);
+}
+
+p{
+    text-align: left;
+    margin-top: 40px;
+    font-size: 20px;
+}
+
+.change{
+    padding-top: 300px;
+    font-weight: 900;
+    font-size: 40px;
+    margin: 30px auto;
+}
+
+.background{
+    background-color: rgb(63, 62, 62);
+    color: white;
+    margin-top: 20px;
+    height: 1000px;
+    font-size: 40px;
 }
