--- a/assignment-2-css/layout-two/style.css
+++ b/assignment-2-css/layout-two/style.css
@@ -6,8 +6,8 @@ body {
 
 .content {
     display: flex; /*w/o this it won't center*/
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column; /*direction divs are stacked*/
+    align-items: center; /*moves items to center*/
 }
 
 .content-inner {
