--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: black;
+  color: white;
 }
 
 h1 {
@@ -10,4 +11,8 @@ h1 {
 
 h2{
   color: chartreuse;
+}
+
+svg{
+  max-width: 100%;
 }
