--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -14,5 +14,15 @@ h2{
 }
 
 svg{
+  display: block;
   max-width: 100%;
+  height: auto;
+}
+
+.containerBox{
+  position: relative;
+  display: inline-block;
+  height: 100%;
+  text-align: center;
+  width: 100%;
 }
