changed font family

--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -19,6 +19,16 @@ svg{
   height: auto;
 }
 
+p{
+  font-family: 'Allura', cursive;
+    font-family: 'Oleo Script', cursive;
+  font-size: 22px;
+}
+
+ul,li{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /*Text sits on image even if you comment out the .container style*/
 .container{
   position: relative;
