--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -15,7 +15,7 @@ h2{
 
 svg{
   display: block;
-  max-width: 100%;
+  width: 250%;
   height: auto;
 }
 
@@ -40,6 +40,33 @@ ul,li{
 
 .top-left {
   position: absolute; /*superimposes text on image*/
-  top: 152px; /*moves text down*/
-  left: 12px; /*moves text to right*/
+  top: 402px; /*moves text down*/
+  left: 32px; /*moves text to right*/
 }
+
+@media (max-width: 1200px) {
+    h1{
+      color: turquoise;
+    }
+
+    svg{
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    p{
+      font-size: 16px;
+    }
+
+    ul,li{
+      font-size: 8px;
+    }
+
+    .top-left {
+      position: absolute; /*superimposes text on image*/
+      top: 102px; /*moves text down*/
+      left: 12px; /*moves text to right*/
+    }
+ 
+}
+
