--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -44,6 +44,27 @@ ul,li{
   left: 32px; /*moves text to right*/
 }
 
+.change-font{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+}
+
+.top-right {
+  position: absolute;
+  bottom: 400px;
+  left: 32px;
+  text-align: left;
+}
+
+a{
+  color: rgb(127, 219, 255);
+}
+
+a:hover{
+  color: rgb(209, 159, 240);
+}
+
+
 @media (max-width: 1200px) {
     h1{
       color: turquoise;
