--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -7,6 +7,7 @@ h1 {
   color: rgb(161, 30, 30);
   font-family: 'Allura', cursive;
     font-family: 'Oleo Script', cursive;
+  font-size: 48px;
 }
 
 h2{
@@ -68,6 +69,7 @@ a:hover{
 @media (max-width: 1200px) {
     h1{
       color: turquoise;
+      font-size: 24px;
     }
 
     svg{
