--- a/scroll-test/style.css
+++ b/scroll-test/style.css
@@ -49,7 +49,7 @@ figure p {
 .step {
     margin: 0 auto 2rem auto;
     background-color: #3b3b3b;
-    color: #fff;
+    color: #e78bdc;
 }
 
 .step:last-child {
