--- a/scroll-test/scrollama/styles/style.css
+++ b/scroll-test/scrollama/styles/style.css
@@ -2,6 +2,10 @@
   font-family: 'Arial';
 }
 
+h1{
+  color: mediumpurple;
+}
+
 .graphic {
   position: sticky;
   top: 40%;
@@ -28,6 +32,8 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: rgb(14, 120, 14);
+  
 }
 
 #scrolly {
@@ -42,6 +48,9 @@ section {
 .scroll-step {
   height: 500px;
   border: 3px dashed rgb(145, 0, 0);
+  color: midnightblue;
+  text-decoration: underline wavy;
+  font-weight: 700;
 }
 
 .intro,
