--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -1,126 +1,57 @@
 body {
-  background-color: black;
-  color: white;
+    background-color: black;
+    color: white;
 }
 
 h1 {
-  color: rgb(161, 30, 30);
-  font-family: 'Allura', cursive;
+    color: rgb(161, 30, 30);
+    font-family: 'Allura', cursive;
     font-family: 'Oleo Script', cursive;
-  font-size: 48px;
+    font-size: 48px;
 }
 
-h2{
-  color: chartreuse;
+h2 {
+    color: chartreuse;
 }
 
-svg{
-  display: block;
-  width: 250%;
-  height: auto;
-}
-
-p{
-  font-family: 'Allura', cursive;
+p {
+    font-family: 'Allura', cursive;
     font-family: 'Oleo Script', cursive;
-  font-size: 22px;
+    font-size: 22px;
 }
 
-ul,li{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ul,
+li {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/*Text sits on image even if you comment out the .container style*/
-.container{
-  position: relative;
-    color: white;
-    float: left;
-    color: white;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+
+a {
+    color: rgb(127, 219, 255);
 }
 
-/*Adding styling for scrolling*/
-.top-left {
-  position: relative; /*superimposes text on image*/
-  top: 850px; /*moves text down*/
-  left: 32px; /*moves text to right*/
-  overflow: hidden;
-  width: max-content;
-  height: max-content;
-  animation: my-animation 24s linear infinite;
-}
-
-/* .move-this{
-  position: absolute;
-    width: max-content;
-    animation: my-animation 23.5s linear infinite;
-}
-
-.moving-parts{
-  position: absolute;
-  margin: 5px 0;
-  padding: 0;
-  font-weight: 400;
-  width: max-content;
-  animation: my-animation 24s linear infinite;
-} */
-
-
-
-.change-font{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-}
-
-.top-right {
-  position: absolute;
-  bottom: 350px;
-  left: 32px;
-  text-align: left;
-}
-
-a{
-  color: rgb(127, 219, 255);
-}
-
-a:hover{
-  color: rgb(209, 159, 240);
+a:hover {
+    color: rgb(209, 159, 240);
 }
 
 
 @media (max-width: 1200px) {
-    h1{
-      color: turquoise;
-      font-size: 24px;
+    h1 {
+        color: turquoise;
+        font-size: 24px;
     }
 
-    svg{
-      max-width: 100%;
-      max-height: 100%;
+    svg {
+        max-width: 100%;
+        max-height: 100%;
     }
 
-    p{
-      font-size: 16px;
+    p {
+        font-size: 16px;
     }
 
-    ul,li{
-      font-size: 8px;
-    }
-
-    .top-left {
-      position: absolute; /*superimposes text on image*/
-      top: 102px; /*moves text down*/
-      left: 12px; /*moves text to right*/
-    }
- 
-    .top-right{
-      position: absolute;
-        top: 350px;
-        left: 32px;
-    }
-
-    .change-font{
-      font-size: 8px;
+    ul,
+    li {
+        font-size: 8px;
     }
 }
-
