changed transition time - made it longer so the picture zooms out
scrolly telling is working - (the text is not scrolling) but the image does resize

--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -50,12 +50,12 @@ svg {
     border: 2px solid red;
     border-radius: 1%;
     display: block;
-    width: 100%;
-    height: auto;
+    width: 300%;
+    height: 300%;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.3s linear;
+    transition: all 5s linear;
 }
 
 
