--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -52,9 +52,9 @@ svg {
     display: block;
     width: 300%;
     height: 300%;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     transition: all 5s linear;
 }
 
