changed the image from svg to img
image resizing works - but now have to adjust the positioning in order for it to take over the full screen

--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -48,7 +48,7 @@ a:hover {
 
 
 /*SVG styling makes the graphic very large*/
-svg {
+img {
     position: sticky;
     border: 2px solid red;
     border-radius: 1%;
