trying event listener notes

--- a/template-web-project-2/styles/style.css
+++ b/template-web-project-2/styles/style.css
@@ -1,23 +1,14 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(196, 240, 152);
 }
 
 h1 {
-  color: red;
+  color: brown;
   font-family: monospace;
 }
 
-h2{
-  color: chartreuse;
-}
 
-/* Have to use :hover if you want to change the styling upon hovering cursor */
-#Ellipse_two:hover{
-  fill: blue; /*use fill to change colors of SVG, NOT color*/
-}
 
-/* Don't have to use :hover - can just change styling */
-#Star_two{
-  fill: green;
-}
+
 
