--- a/hypertext-narrative/styles/style2.css
+++ b/hypertext-narrative/styles/style2.css
@@ -57,11 +57,10 @@ div {
 }
 
 .scrolly {
-    height: 500px;
-    /* border: 3px dashed rgb(145, 0, 0); */
-    color: white;
-    font-weight: 400;
-    width: 30%;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    position: relative;
 }
 
 .scroll-step {
