created home page

--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -1,4 +1,4 @@
-/*https: //www.bannerbear.com/blog/how-to-overlay-text-on-an-image-in-html-and-css/#:~:text=First%2C%20create%20a%20new%20HTML,the%20head%20and%20body%20sections.&text=In%20the%20body%20section%2C%20create,and%20add%20your%20text%20inside.*/
+/*https: //www.bannerbear.com/blog/how-to-overlay-text-on-an-image-in-html-and-css/*/
 
 body {
     background-color: black;
