--- a/hypertext-narrative/styles/style.css
+++ b/hypertext-narrative/styles/style.css
@@ -37,7 +37,27 @@ position: fixed;
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    transition: all 10s linear;
+    transition: all 30s linear;
+}
+
+.style-pic{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.frost-tag {
+    position: relative;
+    top: 60;
+    /*smaller the #, higher up the element*/
+    left: 0;
+    /*smaller the #, more left the element is*/
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 
 
@@ -83,7 +103,6 @@ div {
 
 @media (max-width: 1200px) {
     h1 {
-        color: turquoise;
         font-size: 24px;
     }
 
@@ -99,5 +118,9 @@ div {
     ul,
     li {
         font-size: 8px;
+    }
+
+    a{
+        font-size: 18px;
     }
 }
