--- a/hypertext-narrative/styles/style-home.css
+++ b/hypertext-narrative/styles/style-home.css
@@ -1,3 +1,5 @@
+/*https: //www.bannerbear.com/blog/how-to-overlay-text-on-an-image-in-html-and-css/*/
+
 body {
     background-color: black;
     color: white;
@@ -5,9 +7,11 @@ body {
     font-family: 'Oleo Script', cursive;
 }
 
-h1{
-    font-size: 47px;
+h1 {
+    color: rgb(161, 30, 30);
+    font-size: 48px;
 }
+
 
 a {
     color: rgb(127, 219, 255);
@@ -18,24 +22,98 @@ a:hover {
     color: rgb(209, 159, 240);
 }
 
-.image-container {
-    position: relative;
-    display: inline-block;
+/* .image-container {
+  position: relative;
+  display: inline-block;
+} */
+
+img {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    transition: all 30s linear;
 }
 
-.image-container img {
-    display: block;
-    width: 300%;
-    height: auto;
+.style-pic {
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
+
+.frost-tag {
+    position: relative;
+    top: 60;
+    /*smaller the #, higher up the element*/
+    left: 0;
+    /*smaller the #, more left the element is*/
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
 
 .overlay-text {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgb(161, 30, 30);
-    padding: 10px 20px;
-    font-size: 20px;
-    text-align: center;
+    top: 90%;
+    left: 0%;
+    transform: translate(5%, -75%); /*this helped push up the text so don't have to scroll to see the rest of it*/
+    color: #fff;
+    padding: 30px 20px;
+    margin-left: 15px;
+    font-size: 26px;
+}
+
+.breadcrumb-item {
+    color: greenyellow;
+}
+
+
+.stretch-text {
+    animation-duration: 10s;
+    animation-name: slidein;
+}
+
+
+
+@keyframes slidein {
+    from {
+        margin-left: 60%;
+        width: 50%;
+    }
+
+    to {
+        margin-bottom: 100%;
+        width: 40%;
+    }
+}
+
+
+
+@media (max-width: 1200px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    ol,
+    li {
+        font-size: 8px;
+    }
+
+    a {
+        font-size: 18px;
+    }
 }
