got small image boxes to appear on the page - but the actual image not there
Not sure if the image image links array is targeting the right sites

--- a/expressive-web/style-collage.css
+++ b/expressive-web/style-collage.css
@@ -24,3 +24,12 @@ img {
     left: 10%;
     top: 25%;
 }
+
+/*Trying to style the images but the images don't show up on DOM*/
+.img-links{
+    position: relative;
+    border: 3px solid rgb(153, 88, 109);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
