--- a/expressive-web/style.css
+++ b/expressive-web/style.css
@@ -1,31 +1,21 @@
 img{
-    position: fixed;
-    width: 100%;
+    position: sticky;
     height: 100%;
+    width: 100%;
 }
 
 .body-tag{
     background-color: black;
+    color: white;
 }
 
 .home-link{
+    color: orange;
+    font-size: 12px;
     position: relative;
-        top: 20%;
-        left: 0%;
-        transform: translate(15%, -100%);
-        color: orange;
-        padding: 10px 15px;
-        margin-left: 15px;
-        font-size: 12px;
+    left: 10px;
 }
 
 .home-link:hover{
     color: silver;
 }
-
-/* .freeze-tag {
-    position: fixed;
-    top: 0;
-    left: 3.5%;
-    margin: 20px;
-} */
