was able to layer the image
added train pic in the background as css and used the background-repeat: no-repeat to stop the image from repeating

--- a/expressive-web/style.css
+++ b/expressive-web/style.css
@@ -2,15 +2,23 @@
     white-space: pre-wrap;
 } */
 
-img{
+.train-pic{
     position: sticky;
     height: 100%;
     width: 100%;
 }
 
+.train-path{
+    background-color: blue;
+    
+}
+
+
 .body-tag{
-    background-color: black;
-    color: white;
+    background-color: rgb(109, 109, 109);
+    background-image: url(images/F-train.jpg);
+    background-repeat: no-repeat; /*stops the image from repeating*/
+
 }
 
 .home-link{
