--- a/expressive-web/style.css
+++ b/expressive-web/style.css
@@ -19,8 +19,10 @@
     background-repeat: no-repeat; /*stops the image from repeating*/
     /* background-position: center sticky; */
     position: sticky;
-    background-size: cover; /*covers the entire screen and stays full during zoom*/
+    background-size: 100%; /*covers the entire screen and stays full during zoom*/
     color: bisque;
+    width: 100%;
+    height: 100%;
 }
 
 .home-link{
@@ -33,3 +35,52 @@
 .home-link:hover{
     color: silver;
 }
+
+.stations{
+    display: block;
+    text-align: center;
+}
+
+.sights{
+    display: flex;
+    justify-content: space-around;
+}
+
+/* :root {
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .container {
+    background-color: transparent;
+    border-radius: 50%;
+    height: 100vh;
+    aspect-ratio: 1 / 1;
+    /*
+      animations declared later in the cascade will override the
+      properties of previously declared animations
+    */
+    /* bounce 'overwrites' the transform set by rise, hence the sun only moves horizontally */
+    /* animation:
+      4s linear 0s infinite alternate rise,
+      4s linear 0s infinite alternate bounce;
+  }
+  
+  @keyframes rise {
+    from {
+      transform: translateY(110vh);
+    }
+    to {
+      transform: translateY(0);
+    }
+  }
+  
+  @keyframes bounce {
+    from {
+      transform: translateX(-50vw);
+    }
+    to {
+      transform: translateX(50vw);
+    }
+  }  */
