added scrollama and d3 scripts - changed active font color

--- a/scrollytelling/D3 scrollama/style.css
+++ b/scrollytelling/D3 scrollama/style.css
@@ -58,7 +58,7 @@ figure p {
 
 .step.is-active {
     background-color: rgb(14, 192, 109);
-    color: #3b3b3b;
+    color: #ebd80b;
 }
 
 .step p {
