--- a/expressive-web/style.css
+++ b/expressive-web/style.css
@@ -8,35 +8,37 @@
     width: 100%;
 } */
 
-#scrolly{
-    display: flex;
-    flex-direction: row;
+.scrolly{
+    /* display: flex;
+    flex-direction: column; */
     height: auto;
     position: relative;
-}
-
-.rocks{
-    margin-left: 150px;
-}
-
-
-.body-tag{
-    background-color: rgb(109, 109, 109);
-    background-image: url(images/F-train.jpg);
-    background-repeat: no-repeat; /*stops the image from repeating*/
-    /* background-position: center sticky; */
-    position: fixed;
-    background-size: 100%; /*covers the entire screen and stays full during zoom*/
     color: bisque;
+}
+
+.route{
+    margin-left: 135px;
+}
+
+body{
+background-color: rgb(109, 109, 109);
+}
+
+.train-pic{
     width: 100%;
     height: 100%;
+    /* background-image: url(images/F-train.jpg); */
+    background-repeat: no-repeat; /*stops the image from repeating*/
+    /* background-position: center sticky; */
+    position: sticky;
+    /* background-size: 100%; covers the entire screen and stays full during zoom */
 }
 
 .home-link{
     color: orange;
     font-size: 12px;
     position: relative;
-    left: 10px;
+    left: 4px;
 }
 
 .home-link:hover{
@@ -47,16 +49,17 @@
     text-align: center;
 }
 
-.sights{
+/* .sights{
     display: flex;
     justify-content: space-around;
-}
+} */
 
 .scroll-step {
   height: 500px;
-  border: 3px dashed rgb(145, 0, 0);
-  color: midnightblue;
-  text-decoration: underline wavy 2px;
+}
+
+ul{
+  list-style: none;
 }
 
 
