--- a/expressive-web/style.css
+++ b/expressive-web/style.css
@@ -1,13 +1,3 @@
-/* .container{
-    white-space: pre-wrap;
-} */
-
-/* .train-pic{
-    position: sticky;
-    height: 100%;
-    width: 100%;
-} */
-
 .scrolly{
     /* display: flex;
     flex-direction: column; */
@@ -18,20 +8,18 @@
 
 .route{
     margin-left: 135px;
+    position: absolute;
 }
 
 body{
-background-color: rgb(109, 109, 109);
+background-color: rgb(46, 46, 46);
 }
 
 .train-pic{
     width: 100%;
     height: 100%;
-    /* background-image: url(images/F-train.jpg); */
-    background-repeat: no-repeat; /*stops the image from repeating*/
-    /* background-position: center sticky; */
     position: fixed;
-    /* background-size: 100%; covers the entire screen and stays full during zoom */
+
 }
 
 .home-link{
@@ -50,8 +38,8 @@ background-color: rgb(109, 109, 109);
 }
 
 /* .sights{
-    display: flex;
-    justify-content: space-around;
+    display: inline-flex;
+    text-align: center;
 } */
 
 .scroll-step {
