--- a/scrollytelling/JS scrollama/styles/style-orig.css
+++ b/scrollytelling/JS scrollama/styles/style-orig.css
@@ -20,9 +20,11 @@ h1{
 
 .ball {
   border-radius: 100%;
-  width: 150px;
-  height: 60px;
-  transition: all 0.8s linear;
+  width: 30px;
+  height: 30px;
+  color: 'blue';
+  background: rgb(255, 0, 191);
+  transition: all 0.3s linear;
 }
 
 p {
