--- a/expressive-web/style-edit.css
+++ b/expressive-web/style-edit.css
@@ -1,9 +1,42 @@
-.scrolly{
-    /* display: flex;
-    flex-direction: column; */
-    height: auto;
-    position: relative;
-    color: bisque;
+.graphic {
+  position: sticky;
+  top: 20%;
+  left: 70%;
+  background: none;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ball {
+  border-radius: 100%;
+  width: 100px;
+  height: 100px;
+  transition: all 10s ease-in-out;
+}
+
+.text-holder{
+  color: white;
+}
+
+#scrolly {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  position: relative;
+}
+
+section {
+  flex-basis: 50%;
+}
+
+.scroll-step {
+  height: 500px;
+  border: 3px dashed rgb(145, 0, 0);
+  color: bisque;
+  font-weight: 700;
+  background-color: aqua;
 }
 
 /* .route{
@@ -18,10 +51,16 @@ background-color: rgb(46, 46, 46);
 }
 
 p{
-  font-size: 28px;
+  font-size: 24px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(14, 120, 14);
+
 }
 
-.train-pic{
+/* .train-pic{
     top: 0;
     left: 0;
     display: block;
@@ -30,7 +69,7 @@ p{
     position: fixed;
     transition: all 60s linear;
 
-}
+} */
 
 .home-link{
     color: orange;
@@ -48,28 +87,45 @@ p{
     text-align: center;
 }
 
+.img-edit{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .sights{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     font-size: 18px;
 }
 
-.scroll-step {
+/* .scroll-step {
   height: 500px;
-}
+} */
 
 ul{
   list-style: none;
 }
 
 .overlay-text {
-  position: absolute;
-  top: 200%;
+  display: flex;
+    flex-direction: row;
+    height: auto;
+    position: relative;
+  top: 20%;
   left: 0%;
   transform: translate(5%, -10%);
   animation-duration: 10s;
   animation-name: slidein;
+}
+
+.intro,
+.end {
+  height: 600px;
+}
+
+.end {
+  margin-top: 200px;
 }
 
 
