--- a/expressive-web/style-edit.css
+++ b/expressive-web/style-edit.css
@@ -36,7 +36,7 @@ section {
   border: 3px dashed rgb(145, 0, 0);
   color: bisque;
   font-weight: 700;
-  background-color: aqua;
+  background-color: palegreen;
 }
 
 /* .route{
@@ -53,11 +53,8 @@ background-color: rgb(46, 46, 46);
 p{
   font-size: 24px;
   margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   color: rgb(14, 120, 14);
-
 }
 
 /* .train-pic{
@@ -75,7 +72,7 @@ p{
     color: orange;
     font-size: 12px;
     left: 4px;
-    position: fixed;
+    position: sticky;
     z-index: 1; /*This will bring the element forward and place it on top of another element provided the two are on the same level (non-nested)*/
 }
 
@@ -94,17 +91,28 @@ p{
 }
 .sights{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     font-size: 18px;
+    align-items: center;
 }
 
-/* .scroll-step {
-  height: 500px;
-} */
 
 ul{
   list-style: none;
+  text-align: center;
+}
+
+ul,a{
+  color: chocolate;
+}
+
+ul,a,img{
+  margin: 3px;
+}
+
+ul,a:hover{
+  color: silver;
 }
 
 .overlay-text {
@@ -119,9 +127,17 @@ ul{
   animation-name: slidein;
 }
 
+.intro{
+  animation: 3s linear 1s infinite alternate slidein;
+}
+
+.intro.visible{
+  opacity: 1;
+}
+
 .intro,
 .end {
-  height: 600px;
+  height: 200px;
 }
 
 .end {
