--- a/expressive-web/style-edit.css
+++ b/expressive-web/style-edit.css
@@ -37,7 +37,7 @@ section {
   border: 3px dashed rgb(145, 0, 0);
   color: bisque;
   font-weight: 700;
-  background-color: rgb(251, 210, 152);
+  background-color: rgb(245, 223, 185);
 }
 
 /* .route{
@@ -48,7 +48,7 @@ section {
 } */
 
 body{
-background-color: rgb(35, 34, 34);
+background-color: rgb(37, 32, 32);
 }
 
 p{
@@ -56,6 +56,12 @@ p{
   margin: auto;
   text-align: center;
   color: rgb(14, 120, 14);
+}
+
+.f-train-path{
+  mix-blend-mode: multiply; /*removes the whitespace behind image*/
+  filter: saturate(6);
+  height: 100vh;
 }
 
 /* .train-pic{
@@ -106,15 +112,15 @@ ul{
 }
 
 ul,a{
-  color: purple;
-}
-
-ul,a:hover{
-  color: silver;
+  color: indigo;
 }
 
 ul,a,img{
   margin: 3px;
+}
+
+ul,a:hover{
+  color: silver;
 }
 
 .overlay-text {
