--- a/expressive-web/home-edit.css
+++ b/expressive-web/home-edit.css
@@ -1,12 +1,59 @@
+body{
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.image-container{
+    top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        transition: all 60s linear;
+}
+
 .open-text {
     color: lightskyblue;
+    font-size: 14px;
+    margin: 30px auto;
 }
 
 .start-link {
     color: orange;
     margin-top: 100px;
+    font-weight: 700;
 }
 
 .start-link:hover {
     color: silver;
+}
+
+.overlay-text {
+    /* display: flex;
+    flex-direction: column; */
+    height: auto;
+    position: relative;
+    top: 10%;
+    left: 0%;
+    transform: translate(5%, 10%);
+    width: 40%;
+    animation-duration: 10s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        top: 20%;
+        /*div container starts from 10% at top of page */
+        left: 30%;
+        /*div moves to the left to the middle of the screen*/
+        margin-right: 25%;
+        /*moves the div to the left [ use 50% to move to middle of the screen]*/
+    }
+
+    to {
+        bottom: 40%;
+        /*div moves to the bottom of the screen*/
+    }
 }
