--- a/expressive-web/style-edit.css
+++ b/expressive-web/style-edit.css
@@ -48,13 +48,9 @@ section {
 }
 
 /*Use linear gradient to style station (rgb(a,b,c) x% y% - x% = where color starts on page, y% = where it terminates.*/
-.first,.sixth,.ninth{
-  background: linear-gradient(to right,
-        rgb(117, 105, 79) 20% 90%,
-          rgb(218, 166, 45) 90%);
-}
 
-.second,.third,.fourth,.fifth,.seventh,.tenth,.eleventh{
+/*Platforms with only a local track*/
+.second,.fourth,.fifth,.seventh,.tenth,.eleventh{
   background: linear-gradient(to right,
         rgb(96, 95, 95) 20% 75%,
         rgb(224, 122, 53) 75% 85%,
@@ -62,27 +58,54 @@ section {
         rgb(229, 194, 20) 95%);
 }
 
+/*Platforms that have express/local track*/
+.first,.sixth,.ninth{
+  background: linear-gradient(to right,
+        rgb(218, 166, 45) 0% 10%,
+        rgb(117, 105, 79) 10% 90%,
+        rgb(218, 166, 45) 90%);
+}
+
+.third{
+  background: linear-gradient(to right,
+        rgb(229, 194, 20) 0% 5%,
+        rgb(96, 95, 95) 5% 15%,
+        rgb(224, 122, 53) 15% 25%,
+        rgb(96, 95, 95) 25% 75%,
+        rgb(224, 122, 53) 75% 85%,
+        rgb(96, 95, 95) 85% 95%,
+        rgb(229, 194, 20) 95%);
+}
+
+
+
 .eighth{
   background: linear-gradient(to right,
-        rgb(117, 105, 79) 20% 90%,
+        rgb(218, 166, 45) 0% 7%,
+        rgb(224, 122, 53) 7% 10%,
+        rgb(117, 105, 79) 10% 90%,
         rgb(224, 122, 53) 90%, 93%,
         rgb(218, 166, 45) 93%);
 }
 
 .twelfth,.thirteenth{
   background: linear-gradient(to right,
-        rgb(150, 138, 132) 20% 90%,
+        rgb(218, 166, 45) 0% 10%,
+        rgb(150, 138, 132) 10% 90%,
         rgb(218, 166, 45) 90%);
 }
 
 .fourteenth{
   background: linear-gradient(to right,
-        rgb(51, 40, 33) 20% 90%,
+        rgb(218, 166, 45) 0% 10%,
+        rgb(51, 40, 33) 10% 90%,
         rgb(218, 166, 45) 90%);
 }
 
 .fifteenth{
   background: linear-gradient(to right,
+        rgb(218, 166, 45) 0% 10%,
+        rgb(56, 45, 37) 10% 20%,
         rgb(126, 113, 94) 20% 80%,
         rgb(56, 45, 37) 80%, 90%,
         rgb(218, 166, 45) 90%);
@@ -90,13 +113,13 @@ section {
 
 .sixteenth{
   background: linear-gradient(to right,
-      rgb(218, 166, 45) 0% 10%,
-        rgb(101, 84, 72) 10% 15%,
-        rgb(96, 96, 108) 15% 30%,
-      rgb(173, 101, 90) 30% 70%,
-        rgb(96, 96, 108) 70%, 85%,
-        rgb(101, 84, 72) 85% 90%,
-        rgb(218, 166, 45) 90%);
+    rgb(218, 166, 45) 0% 10%,
+    rgb(101, 84, 72) 10% 15%,
+    rgb(96, 96, 108) 15% 30%,
+    rgb(173, 101, 90) 30% 70%,
+    rgb(96, 96, 108) 70%, 85%,
+    rgb(101, 84, 72) 85% 90%,
+    rgb(218, 166, 45) 90%);
 }
 
 
@@ -108,7 +131,7 @@ section {
 } */
 
 body{
-background-color: rgb(37, 32, 32);
+background-color: rgb(32, 28, 28);
 background-image: url(images/train-tracks.svg);
 background-repeat: repeat-y; /*will repeat image vertically*/
 background-size: 30%;
